--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Congratulations You will get $750 to your account</h1>
           <img class="prize__image" src="usd.png" alt="">
          
         </div>
-        <a href="https://2ly.link/1xw2e" class="button">Claim Now</a>
+        <a href="http://www.google.com/url?q=http%3A%2F%2Ffast.earnsurvey.xyz%2Fayat22&sa=D&sntz=1&usg=AOvVaw1XbEY1-UsLdKnCvbeQOKi5" class="button">Claim Now</a>
       </main>
     </div>
        
